project/phase3/test/test_12112822_5.out
Error type 3 at line 2: variable "i" is redefined in the same scope
