project/phase3/test/test_12112822_5.spl
int foo(int i){
    int i = 1;
    return i;
}
int main(){
    foo(1);
    return 0;
}